--- a/package.json
+++ b/package.json
@@ -5,23 +5,62 @@
     "create-user-only-deploy": "bin/create-user-only-deploy.js"
   },
   "scripts": {
+    "lint": "eslint lib/** bin/** --ext .ts,.tsx --fix",
     "build": "tsc",
     "watch": "tsc -w",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "cdk": "cdk"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged -d"
+    }
+  },
+  "lint-staged": {
+    "*.ts": [
+      "jest --passWithNoTests",
+      "eslint lib/** bin/** --ext .ts,.tsx --fix",
+      "git add"
+    ]
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$"
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.50.0",
-    "@types/jest": "^25.2.1",
-    "@types/node": "10.17.5",
-    "jest": "^25.5.0",
-    "ts-jest": "^25.3.1",
+    "@types/jest": "^26.0.4",
+    "@types/node": "14.0.19",
+    "@typescript-eslint/eslint-plugin": "^3.6.0",
+    "@typescript-eslint/parser": "^3.6.0",
     "aws-cdk": "1.50.0",
-    "ts-node": "^8.1.0",
-    "typescript": "~3.7.2"
+    "eslint": "^7.4.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^23.18.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "fork-ts-checker-webpack-plugin": "^5.0.7",
+    "husky": "^4.2.5",
+    "jest": "^26.1.0",
+    "lint-staged": "^10.2.11",
+    "prettier": "^2.0.5",
+    "npm-check-updates": "^7.0.1",
+    "textlint": "^11.6.3",
+    "textlint-rule-preset-ja-spacing": "^2.0.1",
+    "textlint-rule-preset-ja-technical-writing": "^4.0.0",
+    "ts-jest": "^26.1.1",
+    "ts-node": "^8.10.2",
+    "typescript": "~3.9.6"
   },
   "dependencies": {
+    "@aws-cdk/aws-iam": "^1.50.0",
     "@aws-cdk/core": "1.50.0",
-    "source-map-support": "^0.5.16"
+    "source-map-support": "^0.5.19"
   }
 }
